--- a/src/Post.css
+++ b/src/Post.css
@@ -26,3 +26,19 @@
     margin-bottom: 45px;
     
 }
+
+.post__commentBox{
+    display: flex;
+    margin-top: 10px;
+
+}
+
+.post__input{
+    flex: 1;
+    border:none;
+    padding: 10px;
+}
+
+.post__button{
+    flex: 0;
+}
