--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
 
 .app__header {
   position: sticky;
+  top: 0px;
+  z-index: 1;
   padding: 20px;
   border-bottom: 1px solid lightgray;
   object-fit: contain;
@@ -20,12 +22,12 @@
   display: flex;
   flex-direction: column;
 }
-.app__post{
-  padding:20px;
+.app__post {
+  padding: 20px;
   display: flex;
   justify-content: center;
 }
 
-.app__postRight{
+.app__postRight {
   margin-left: 20px;
 }
